--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">subscription</string>
+
+    <string name="format_price">%,.0f원</string>
+    <string name="total_price_per_month">월 구독 비용</string>
 </resources>
