firebase database 연동

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">subscription</string>
+    <string name="app_name">구독모아</string>
 
     <string name="format_price">%,.0f원</string>
     <string name="total_price_per_month">월 구독 비용</string>
     <string name="str_setting">설정</string>
     <string name="str_add">추가</string>
     <string name="str_detail">상세</string>
+    <string name="str_save">추가하였습니다 😁</string>
 </resources>
