--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="str_add">추가</string>
     <string name="str_detail">상세</string>
     <string name="str_save">추가하였습니다 😁</string>
+    <string name="str_already">이미 추가되어있습니다</string>
+    <string name="delete_success">구독 취소 하였습니다</string>
+    <string name="delete_failure">구독 취소에 실패하였습니다</string>
 </resources>
